C
13:54:49 **** Incremental Build of configuration Debug for project mcu_boot_u5_bootloader ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/Bootloader_core.c" -mcpu=cortex-m33 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32U5A9xx -c -I../Core/Inc -I../Drivers/STM32U5xx_HAL_Driver/Inc -I../Drivers/STM32U5xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32U5xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/Bootloader_core.d" -MT"Core/Src/Bootloader_core.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/Bootloader_core.o"
../Core/Src/Bootloader_core.c: In function 'Bootloader_Print_Logo':
../Core/Src/Bootloader_core.c:42:28: warning: implicit declaration of function 'Get_Active_Slot_Addr' [-Wimplicit-function-declaration]
   42 |     uint32_t active_slot = Get_Active_Slot_Addr();
      |                            ^~~~~~~~~~~~~~~~~~~~
../Core/Src/Bootloader_core.c: At top level:
../Core/Src/Bootloader_core.c:80:10: error: conflicting types for 'Get_Active_Slot_Addr'; have 'uint32_t(void)' {aka 'long unsigned int(void)'}
   80 | uint32_t Get_Active_Slot_Addr(void)
      |          ^~~~~~~~~~~~~~~~~~~~
../Core/Src/Bootloader_core.c:42:28: note: previous implicit declaration of 'Get_Active_Slot_Addr' with type 'int()'
   42 |     uint32_t active_slot = Get_Active_Slot_Addr();
      |                            ^~~~~~~~~~~~~~~~~~~~
../Core/Src/Bootloader_core.c: In function 'Bootloader_Menu_Loop':
../Core/Src/Bootloader_core.c:183:21: warning: unused variable 'dummy' [-Wunused-variable]
  183 |             uint8_t dummy = huart1.Instance->RDR; // Veriyi oku ve yut
      |                     ^~~~~
make: *** [Core/Src/subdir.mk:52: Core/Src/Bootloader_core.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

13:54:50 Build Failed. 2 errors, 2 warnings. (took 1s.127ms)

